Moved more files into directories/subdirectories

--- a/css/gollum-static.css
+++ b/css/gollum-static.css
@@ -76,8 +76,8 @@ a:hover, a:visited {
 /* @section body */
 
 .has-leftbar #wiki-body {
-  float: right;
-  clear: right;
+  float: left;
+  clear: left;
 }
 
 #wiki-body {
