--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -47,6 +47,12 @@
   </div>
 
 </div>
+<div id="footer">
+  <p id="last-edit">Last edited by <b>{{author}}</b>, {{date}}</p>
+  <p>
+    <a id="delete-link" href="{{base_url}}/{{escaped_url_path}}" data-confirm="Are you sure you want to delete this page?"><span>Delete this Page</span></a>
+  </p>
+</div>
 </div>
 
 <form name="rename" method="POST" action="{{base_url}}/rename/{{escaped_url_path}}">
