--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -1,3 +1,10 @@
+<script type="text/javascript">
+Mousetrap.bind(['e'], function( e ) {
+  e.preventDefault();
+  window.location = "/edit" + window.location.pathname;
+  return false;
+});
+</script>
 <div id="wiki-wrapper" class="page">
 <div id="head">
   <h1>{{page_header}}</h1>
@@ -7,8 +14,24 @@
     </li>
     <li class="minibutton"><a href="{{base_url}}/"
        class="action-home-page">Home</a></li>
-    <li class="minibutton"><a href="https://www.rosettacommons.org/docs/feedback?ref={{page.path}}"
-       class="action-home-page">Feedback</a></li>
+    <li class="minibutton"><a href="{{base_url}}/pages"
+      class="action-all-pages">All</a></li>
+    <li class="minibutton"><a href="{{base_url}}/fileview"
+    class="action-fileview">Files</a></li>
+    <li class="minibutton jaws">
+      <a href="#" id="minibutton-new-page">New</a></li>
+    {{#allow_uploads}}
+    <li class="minibutton jaws">
+      <a href="#" id="minibutton-upload-page">Upload</a></li>
+    {{/allow_uploads}}
+    {{#editable}}
+    <li class="minibutton jaws">
+      <a href="#" id="minibutton-rename-page">Rename</a></li>
+    <li class="minibutton"><a href="{{base_url}}/edit/{{escaped_url_path}}"
+       class="action-edit-page">Edit</a></li>
+    {{/editable}}
+    <li class="minibutton"><a href="{{base_url}}/history/{{escaped_url_path}}"
+       class="action-page-history">History</a></li>
   </ul>
 </div>
 <div id="wiki-content">
