--- a/static-wiki-templates/page.mustache
+++ b/static-wiki-templates/page.mustache
@@ -2,7 +2,7 @@
 <div id="head">
   <h1>{{page_header}}</h1>
   <ul class="actions">
-    <li class="minibutton">
+    <li class="searchbar">
       {{>searchbar}}
     </li>
     <li class="minibutton"><a href="{{base_url}}/"
