--- a/static-wiki-templates/searchbar.mustache
+++ b/static-wiki-templates/searchbar.mustache
@@ -19,6 +19,7 @@ google.setOnLoadCallback(function() {
 <style type='text/css'>
   li.searchbar {
     width: 350px;
+    padding-right: 14px;
   }
   li.minibutton {
     padding-top: 2px;
